# OnTheFloor

./: README.md  main.py  pyproject.toml  pytest.ini  to_do.txt
.github/workflows/: ci.yaml
alembic/: env.py
alembic/versions/: 1c651b366cc7_make_exercise_session_id_non_nullable_.py  1e35d41303e7_small_changes_exercise_table.py  416264c17545_new_small_changes_exercise_table.py  4574c66124b7_initial_schema.py  57123e26b043_add_cascade_deletes_for_user_session_.py  73db2a4f8ba6_initial_schema_with_uuid.py  845c819d2f27_initial_migration.py  9b588541425e_recreate_all_models.py  b1142657aea9_refactor_exercise_positions_with_block_.py  f6198acb5e28_new_small_changes_again_exercise_table.py
deployment/: docker-compose.yml
deployment/db/: init_db.sql  populate_db.sql
src/: main.py
src/api/: deps.py
src/api/routes/: block.py  exercise.py  location.py  session.py  user.py
src/api/schemas/: block.py  exercise.py  location.py  session.py  user.py
src/core/: database.py  entities.py  injector.py  settings.py
src/data/: models.py
src/data/dao/: block_dao.py  exercise_dao.py  (+3 more)
src/security/: jwt.py  schema.py
src/services/: block_service.py  exercise_service.py  location_service.py  session_service.py  user_service.py
tests/: conftest.py
tests/api/: test_block_route.py  test_exercise_route.py  test_location_route.py  test_session_route.py  test_user_route.py
tests/services/: test_block_service.py  test_exercice_service.py  test_location_service.py  test_session_service.py
tests/sevices/: test_block_service.py  test_session_service.py  test_user_service.py
(+9 files in other folders)
