[project]
name = "onthefloor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "black>=25.12.0",
    "mypy>=1.19.1",
    "pylint>=4.0.4",
    "ruff>=0.14.10",
]
tests = [
    "coverage>=7.13.0",
    "pytest>=9.0.2",
]
