[project]
name = "onthefloor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"

requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.127.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "mypy>=1.19.1",
    "pylint>=4.0.4",
    "ruff>=0.14.10",
]
tests = [
    "coverage>=7.13.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.1",
]
